[gd_scene load_steps=3 format=3 uid="uid://b4tcy8y7nif7v"]

[ext_resource type="Script" uid="uid://b6j1bsvb2y0yj" path="res://Scenes/Player/UI/GridTileDragAndDrop.gd" id="1_85yq5"]
[ext_resource type="Texture2D" uid="uid://c8x41owbuxcka" path="res://BlenderFiles/PlanetTest/YarnBall1_normal.png" id="2_dhoks"]

[node name="GridTile" type="TextureRect"]
custom_minimum_size = Vector2(50, 50)
offset_left = 148.0
offset_top = 413.0
offset_right = 198.0
offset_bottom = 463.0
mouse_filter = 0
expand_mode = 1
script = ExtResource("1_85yq5")
previewColor = Color(0.3647059, 0.3647059, 0.3647059, 1)
testTexture = ExtResource("2_dhoks")

[node name="Panel" type="Panel" parent="."]
show_behind_parent = true
custom_minimum_size = Vector2(50, 50)
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
mouse_filter = 2

[connection signal="mouse_entered" from="." to="." method="DebugMouseOver"]
[connection signal="mouse_exited" from="." to="." method="DebugMouseLeave"]
